Fix layout for organizers on mobile and desktop

--- a/_sass/people.scss
+++ b/_sass/people.scss
@@ -1,9 +1,13 @@
 #organisors,
+#team .container {
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+#organisors,
 #team {
-  .container {
-    justify-content: space-between;
-    flex-direction: row;
-  }
   .members {
     display: flex;
     flex: 1;
@@ -14,18 +18,18 @@
 }
 
 #organisors {
-  .description {
-    flex: 1;
+  .container {
     max-width: $six-col;
   }
   .members {
     max-width: $five-col;
   }
-  @media(max-width: $medium-device) {
-    .container {
-      flex-direction: column;
-      align-items: center;
-    }
+}
+@media(max-width: $medium-device) {
+  #organisors {
+    flex-direction: column;
+    align-items: center;
+
     .members {
       width: 100%;
     }
